--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="title-spin">Museum Toulouse Samedi ?</h1>
+        <h1 class="title-spin">Musée, café, Samedi ?</h1>
         <img src="images/carte.png" alt="carte" class="img-carte" />
         
         <div class="buttons-container">
@@ -19,8 +19,8 @@
             <button class="btn btn-oui" onclick="window.location.href='oui.html'">For sure 😎</button>
         </div>
             <div class="buttons-container">
-            <button class="btn btn-oui" onclick="window.location.href='ouimaisdate.html'">Ok mais un autre jour</button>
-            <button class="btn btn-oui" onclick="window.location.href='ouimaisactivite.html'">Ok mais un autre endroit</button>
+            <button class="btn btn-oui" onclick="window.location.href='ouimaisdate.html'">Oui mais un autre jour</button>
+            <button class="btn btn-oui" onclick="window.location.href='ouimaisactivite.html'">Oui mais un autre endroit</button>
         </div>
         <div class="buttons-container">
             <button class="btn btn-non" onclick="window.location.href='non.html'" id="btn-non">Non</button>
