--- a/non.html
+++ b/non.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>T'as vraiment réussie à cliquer sur le bouton ?</h1>
+        <h1>T'as vraiment réussi à cliquer sur le bouton ?</h1>
         <div class="gif-container">
             <a target="_blank" rel="noopener noreferrer">
                 <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTEyaGpnZmU2aGp5MndzOW1vcHZkc3EydHdqaHI0amJ1dXdxMnYzMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/pVXyJy2k7WO1n49bGg/giphy.gif" alt="gif" class="gif-image" />
