--- a/ouimaisdate.html
+++ b/ouimaisdate.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 class="title-spin">Let's Go !!!</h1>
-        <h3>Envoi moi un message pour qu'on s'organise un autre jour 😄</h3>
+        <h3>Envoie-moi un message pour qu'on s'organise un autre jour 😄</h3>
         <div class="gif-container">
             <a target="_blank" rel="noopener noreferrer">
                 <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbTJxcTYyOGpuMzRueXBqNGcyOWkzNTBnOXc4eDkxZ255bjF4M3J4YiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3UkqVq3F50bVCi9URl/giphy.gif" alt="gif" class="gif-image-oui" />
